--- a/styles/main.css
+++ b/styles/main.css
@@ -13,6 +13,10 @@ body {
     overflow-x: hidden;
 }
 
+.content-padding {
+    padding-top: 80px;
+}
+
 a {
     text-decoration: none;
     color: inherit;
